# CarClassifier

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: VehicleClassification.hpp  VehicleDetection.hpp
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
src/: VehicleClassification.cpp  VehicleDetection.cpp  main.cpp
train/: VehicleClassifier.ipynb
